src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Contact_Primary_Account__c</fullName>
        <formula>Account.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Primary Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_decisor__c</fullName>
        <formula>text( Contact.decision_making_desc__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact decisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>calc_prof_position_type__c</fullName>
        <formula>IF(ISPICKVAL(prof_position_type__c ,&apos;OTROS&apos;),other_prof_prosition_type__c,text(prof_position_type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_prof_prosition_type__c</fullName>
        <label>Other position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prof_position_type__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCIONISTA</fullName>
                </value>
                <value>
                    <fullName>PRESIDENTE DE DIRECTORIO</fullName>
                </value>
                <value>
                    <fullName>APODERADO</fullName>
                </value>
                <value>
                    <fullName>DIRECTORIO</fullName>
                </value>
                <value>
                    <fullName>GERENTE GENERAL</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE FINANZAS</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE ADMINISTRACION Y FINANZAS</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE ADMINISTRACION</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE RRHH</fullName>
                </value>
                <value>
                    <fullName>GERENTE COMERCIAL</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE OPERACIONES</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE CONTABILIDAD</fullName>
                </value>
                <value>
                    <fullName>JEFE DE FINANZAS</fullName>
                </value>
                <value>
                    <fullName>JEFE DE TESORERIA</fullName>
                </value>
                <value>
                    <fullName>JEFE DE ADMINISTRACION Y FINANZAS</fullName>
                </value>
                <value>
                    <fullName>JEFE DE ADMINISTRACIÓN</fullName>
                </value>
                <value>
                    <fullName>JEFE DE CONTABILIDAD</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR</fullName>
                </value>
                <value>
                    <fullName>ASISTENTE</fullName>
                </value>
                <value>
                    <fullName>OTROS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>decision_making_desc__c</fullName>
        <label>Decision Making Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>